# octo-guacamole-insights

./: .gitignore  CMakeLists.txt  Main.cpp  TODO.md  pgns.txt  qml.qrc
Middleware/aiHandler/: AiHandler.cpp  AiHandler.h
Middleware/boardHandler/: BoardHandler.cpp  BoardHandler.h  BoardTypes.h  EngineTypes.h  MovesListModel.cpp  MovesListModel.h
Middleware/engineHandler/: EngineHandler.cpp  EngineHandler.h  EngineTypes.h  MovesListModel.h
qml/: AnalysisScreen.qml  ChessBoard.qml  InitialScreen.qml  JS_functions.js  Main.qml  board_utils.js
